# tinyc

./: .gitignore  ARCHITECTURE  ARCHITECTURE.md  COMPILER  COMPILER-ARCHITECTURE.md  Cargo.toml  Makefile  README.md  TARGETS  test.sh
.github/workflows/: check.yml  test.yml
docs/: ISA  SOURCE  TARGET
src/: ast.rs  eval.rs  gen.rs  generator.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  register_generator.rs  rep.rs  scanner.rs  stack_generator.rs  typer.rs
src/compiler/: eval.rs  parser.rs  typer.rs
src/generator/: mod.rs
src/parser/: mod.rs  parser.rs
src/snapshots/: din__eval__test_valid_arithmetic_precedence__add_sub.snap  din__eval__tests__valid_addition_multi.snap  din__lexer__test_valid__arithmetic_addition.snap  din__lexer__test_valid__arithmetic_div.snap  din__lexer__test_valid__arithmetic_mult.snap  din__lexer__test_valid__hello.snap  din__parser__lexer__test_valid__arithmetic_add.snap.new  din__parser__lexer__test_valid__arithmetic_add_multi.snap.new  din__parser__lexer__test_valid__arithmetic_div.snap.new  din__parser__lexer__test_valid__arithmetic_mult.snap.new  din__parser__lexer__test_valid__arithmetic_sub.snap.new  din__parser__lexer__test_valid__hello.snap.new  din__parser__test_legal_arithmetic__sub.snap  din__parser__test_valid_arithmetic__add_multi.snap  din__parser__test_valid_arithmetic__mult.snap  din__parser__test_valid_arithmetic_precedence__add_sub.snap
tests/: README  main.rs
tests/snapshot/: din__eval__tests__valid_mult.snap  din__lexer__test_valid__arithmetic_add_multi.snap  din__lexer__test_valid__hello.snap  (+3 more)
(+52 files in other folders)
