[package]
name = "din"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Zhang"]
description = "a software 1.0 compiler: C89/90 -> RV32I"
readme = "README.md"
repository = "https://github.com/jeffzh4ng/din"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "riscv"]
categories = ["compilers"]

[profile.dev.package]
insta.opt-level = 3

[dependencies]
anyhow = "1.0.82"
proptest = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
